--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
  "dependencies": {
   "body-parser": "^1.17.2",
   "compression": "^1.7.0",
+  "connect-flash": "~0.1.1",
+  "connect-mongo": "~1.3.2",
   "ejs": "~>1.0.0",
-  "express": "~4.15.4",
+  "express": "^4.16.3",
   "express-session": "^1.15.5",
   "method-override": "^2.3.9",
-  "morgan": "^1.8.2",
   "mongoose": "~4.11.7",
-  "connect-mongo": "~1.3.2",
+  "morgan": "^1.8.2",
   "passport": "~0.4.0",
-  "passport-local": "~1.0.0",
-  "connect-flash": "~0.1.1"
+  "passport-local": "~1.0.0"
  }
 }
